Removed background-attatchment fixed on smaller screens

--- a/css/main.scss
+++ b/css/main.scss
@@ -667,6 +667,7 @@ html {
     height: 80vh;
     background: url('../img/BG 2.png') center/cover no-repeat fixed;
     padding: 10vh 0;
+    text-align:center;
 
     .title {
         color: #fff;
@@ -731,10 +732,7 @@ html {
 
     .btn {
         position:relative;
-        left: 45%;
         top: 7vh;
-        transform: translateX(-50%);
-        text-align:center;
     }
 }
 
@@ -1713,6 +1711,11 @@ html {
 }
 
 @media screen and (max-width:1040px) {
+
+    
+    .work, .contact-section, .about-header, .get-in-touch, .header-w-divider, .services-section, .latest-work-section, .faq-section, .affiliate-disclosure-section, .coming-soon-section, .portfolio-work-section, .case-study-container {
+        background-attachment: scroll;
+    }
 
     .navbar {
 
